# LaunchLineStarter

./: .editorconfig  .env.example  .envrc.example  .pre-commit-config.yaml  AGENT_CONTEXT.yaml  BACKEND_DEPLOYMENT_REQUIREMENTS.md  CONTACT_PAGE_MIGRATION.md  FEATURE_FLAG_SETUP_SUMMARY.md  FRONTEND_BACKEND_API_REQUIREMENTS.md  INTEGRATION_SETUP.md  INTEGRATION_STATUS.md  LICENSE  Makefile  POWERFUL_WAGTAIL_SYSTEM.md  README.md  SERVICES_WAGTAIL_MIGRATION.md  WAGTAIL_TRANSITION_GUIDE.md  env.local  test_integration.py  test_services_migration.py
.github/workflows/: azure-static-web-apps-icy-bay-05fd6d410.yml  azure-static-web-apps.yml
backend/: .env.example  Dockerfile  env.example  manage.py  pyproject.toml
backend/src/: db.sqlite3
backend/src/config/: asgi.py  urls.py  wsgi.py
backend/src/config/settings/: base.py  dev.py  prod.py
backend/src/core/: admin.py  api.py  apps.py  models.py  seo.py  urls.py  views.py  wagtail_hooks.py
backend/src/core/management/commands/: seed_data.py  setup_feature_flags.py  setup_wagtail_pages.py
backend/src/core/migrations/: 0001_initial.py
backend/src/leads/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/src/leads/migrations/: 0001_initial.py
backend/src/pages/: api.py  apps.py  blocks.py  models.py
backend/src/pages/migrations/: 0001_initial.py  0002_contactpage.py  0003_remove_contactpage_address_line_1_and_more.py  0004_remove_homepage_hero_background_image_and_more.py
backend/tests/: test_leads_api.py  test_pages_api.py
frontend/: .env.example  .eslintrc.cjs  .gitignore  FEATURE_FLAGS.md  README.md  azure-deploy.md  azure-env-example.txt  env.d.ts  env.local.example  index.html  netlify.toml  package-lock.json  package.json  staticwebapp.config.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/public/: sw.js
frontend/scripts/: analyze-bundle.js
frontend/src/: App.vue  app.css  main.ts  router.ts
frontend/src/components/: CTA.vue  DevTools.vue  ErrorBoundary.vue  FeatureGrid.vue  Footer.vue  Hero.vue  Navbar.vue  Testimonial.vue
frontend/src/composables/: useAnimation.ts  useBlogData.ts  useBlogFilters.ts  useBlogPostData.ts  useBlogState.ts  useContactForm.ts  useContactMetrics.ts  useData.ts  useDevTools.ts  useFeatureFlags.ts  useFloatingWidget.ts  useMobileDetection.ts  useNewsletter.ts  usePerformance.ts  usePortfolioFilters.ts  useScroll.ts  (+11 more)
ops/: docker-compose.dev.yml
ops/nginx/: default.conf
(+222 files in other folders)
